# src/validation/contacts.js
@@ -22,3 +22,25 @@ export const createContactSchema = Joi.object({
         'any.only': 'Contact type must be one of [home, personal, work]'
     }),
 });
+
+export const patchContactSchema = Joi.object({
+    name: Joi.string().min(3).max(20).messages({
+        'string.base': 'Name should be a string',
+        'string.min': 'Name should have at least {#limit} characters',
+        'string.max': 'Name should have at most {#limit} characters',
+        'any.required': 'Name is required!',
+    }),
+    email: Joi.string().email().min(3).max(20).default(null).messages({
+        'string.email': 'Email should be a valid email',
+        'string.min': 'Email should have at least {#limit} characters',
+        'string.max': 'Email should have at most {#limit} characters',
+    }),
+    phoneNumber: Joi.number().integer().messages({
+        'number.base': 'Phone number should be a number',
+        'any.required': 'Phone number is required!'
+    }),
+    isFavourite: Joi.boolean().default(false),
+    contactType: Joi.string().valid('home', 'personal', 'work').messages({
+        'any.only': 'Contact type must be one of [home, personal, work]'
+    }),
+});
